--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
    "files.associations": {
-      "unistd.h": "c"
+      "unistd.h": "c",
+      "stdio.h": "c"
    },
    "C_Cpp.errorSquiggles": "disabled",
    "python.testing.pytestArgs": [
