Added last week of semester

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
    "files.associations": {
       "unistd.h": "c",
-      "stdio.h": "c"
+      "stdio.h": "c",
+      "vector": "cpp",
+      "string": "cpp",
+      "unordered_map": "cpp",
+      "fstream": "cpp"
    },
    "C_Cpp.errorSquiggles": "disabled",
    "python.testing.pytestArgs": [
